syntax = "proto3";

option csharp_namespace = "Auth.Grpc";

package auth;

service AuthService {
    rpc Register (RegisterRequest) returns (AuthResponse);
    rpc Login (LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    optional string accessToken = 1;
    optional string errorMessage = 2;
}